--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+header {}
+
+@media (max-width: 1024px) {
+    .clipPath-closed {
+        clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+    }
+
+    .clipPath-opened {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+}
